--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "autoprefixer": "10.4.14",
+    "country-list": "^2.3.0",
     "next": "13.4.7",
     "postcss": "8.4.24",
     "react": "18.2.0",
@@ -34,5 +35,8 @@
     "semi": false,
     "singleQuote": false,
     "printWidth": 80
+  },
+  "devDependencies": {
+    "@types/country-list": "^2.1.1"
   }
 }
